@@ -546,6 +546,15 @@ v5_get_creds(krb5_context ctx,
 		}
 		return PAM_SUCCESS;
 		break;
+	case KRB5KDC_ERR_CLIENT_REVOKED:
+		/* There's an entry on the KDC, but it's disabled.  We're try
+		 * to treat that as we would a "principal unknown error". */
+		if (options->warn) {
+			message.msg = "Error: account is locked.";
+			message.msg_style = PAM_TEXT_INFO;
+			_pam_krb5_conv_call(pamh, &message, 1, NULL);
+		}
+		/* fall through */
 	case KRB5KDC_ERR_C_PRINCIPAL_UNKNOWN:
 	case KRB5KDC_ERR_NAME_EXP:
 		/* The user is unknown or a principal has expired. */
