@@ -1,4 +1,9 @@
 2007-07-13:
+	* srv/v5.c: treat a "client revoked" error (which is generated by
+	disabling the account, at least on a Windows KDC) as an "unknown
+	principal" error (#230442).
+
+2007-07-13:
 	* src/v5.c: initialize the entire prompter_data structure.
 	* src/v4.c,src/v5.c,src/minikafs.c,src/tokens.c,src/init.c: use the
 	error_message wrapper.
